Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <h2>공통 설정</h2>
             <div class="form-group">
                 <label for="companyName">회사명 *</label>
-                <input type="text" id="companyName" placeholder="예: (주)ABC회사" value="남양인터내셔날">
+                <input type="text" id="companyName" placeholder="예: (주)ABC회사" value="NAMYANG INTL CO.,LTD">
             </div>
             <div class="form-group">
                 <label for="companyAddress">회사 주소</label>
-                <input type="text" id="companyAddress" placeholder="예: 서울시 강남구 테헤란로 123" value="서울 성동구 뚝섬로1길 63, 701호">
+                <input type="text" id="companyAddress" placeholder="예: 서울시 강남구 테헤란로 123" value="RM #701,Youngchang Digital Tower 63,Ttukseom-ro 1-gil, Seongdong-gu, Seoul, Republic of Korea">
             </div>
             <div class="form-group">
                 <label for="companyWebsite">회사 웹사이트</label>
