Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>공통 설정</h2>
             <div class="form-group">
                 <label for="companyName">회사명 *</label>
-                <input type="text" id="companyName" placeholder="예: (주)ABC회사" value="NAMYANG INTL CO.,LTD">
+                <input type="text" id="companyName" placeholder="예: (주)ABC회사" value="Namyang">
             </div>
             <div class="form-group">
                 <label for="companyAddress">회사 주소</label>
